# fairydust

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  FRONTEND_TEAM_STREAK_REMOVAL_SUMMARY.md  FRONTEND_VIDEO_API_UPDATE.md  PHOTO_MANAGEMENT_API.md  README.md  STUFFIE_STORIES_BACKEND_REQUIREMENTS.md  add_deletion_logs_table.sql  add_user_timezone.sql  add_user_timezone_simple.sql  build.sh  build_admin.sh  check_image_urls.sql  claude_desktop_config.json  cleanup_failed_images.sql  debug_user_serialization.py  docker-compose.yml  dump.sql  fix_app_grants_constraint.sql  fix_image_urls.sql  fix_streak_constraints.sql  implement_grace_period.sql  populate_apps.sql  pyproject.toml  pytest.ini  remove_streak_add_daily_bonus.sql  requirements-dev.txt  requirements-test.txt  test_activity_api.py  test_fortune_update.py  test_hubspot_webhook.py  test_inspire_imports.py  test_referral_api.py  test_restaurant_endpoints.py  test_retry_visibility.py  test_user_model.py  validate_inspire.py
docs/: API_INTEGRATION_GUIDE.md  apple_sso_frontend_integration.md  builder_removal_refactor.md  dob_collection_strategy.md  frontend_sso_name_extraction.md
examples/: package.json  test-yoga-integration.js
mcp-fairydust/: .env.example  .gitignore  Dockerfile  README.md  package.json  railway.toml
migrations/: add_referral_redemption_unique_constraint.sql  add_story_images_retry_metadata.sql  create_ai_usage_logs.sql  refactor_model_configs.sql  uuid7_migration.py
scripts/: add_admin_support.sql  add_question_history.sql  cleanup_llm_usage_logs.sql  clear_action_pricing.py  clear_action_pricing_psql.sh  clear_action_pricing_simple.py  commit.sh  create_video_jobs_table.sql  format.sh  generate_service_token.py  lint.sh  migrate_ai_usage_logs.py  migrate_builder_ids.sql  migrate_llm_to_ai_logs.sql  prepare_apple_sso_test.sql  register-yoga-app-api.js  register_yoga_app.sh  register_yoga_app.sql
shared/: ai_usage_logger.py  app_config_cache.py  auth_middleware.py  daily_bonus_utils.py  database.py  email_service.py  hubspot_webhook.py  json_utils.py  llm_client.py  llm_pricing.py  llm_usage_logger.py  middleware.py  redis_client.py  sms_service.py  storage_service.py  streak_utils.py  streak_utils_grace_period.py  uuid_utils.py
temp-sdk-build/: .gitignore  INTEGRATION.md  README.md  SIMPLE.md  jest.config.js  (+5 more)
(+325 files in other folders)
